Добавлены docstring в файлы приложений

--- a/База_рекламаций/reclamationhub/analytics/templates/analytics/combined_chart.html
+++ b/База_рекламаций/reclamationhub/analytics/templates/analytics/combined_chart.html
@@ -1,3 +1,5 @@
+<!-- Шаблон страницы анализа рекламаций по виду изделия, датам изготовления и уведомления -->
+
 {% extends 'base.html' %}
 {% load static %}
 
