--- a/База_рекламаций/reclamationhub/claims/templates/claims/claim_prognosis.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/claim_prognosis.html
@@ -1,3 +1,5 @@
+<!-- Шаблон страницы с формой прогнозирования претензий -->
+
 <!-- claims/templates/claims/claim_prognosis.html -->
 
 {% extends 'base.html' %}
