--- a/База_рекламаций/reclamationhub/claims/templates/claims/consumer_analysis.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/consumer_analysis.html
@@ -1,5 +1,6 @@
+<!-- Шаблон страницы с формой анализа претензий по потребителям -->
+
 <!-- claims/templates/claims/consumer_analysis.html -->
-<!-- Шаблон анализа претензий по потребителям -->
 
 {% extends 'base.html' %}
 {% load static %}
