--- a/База_рекламаций/reclamationhub/claims/templates/claims/dashboard.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/dashboard.html
@@ -1,5 +1,6 @@
+<!-- Шаблон с формой Dashboard претензий -->
+
 <!-- claims/templates/claims/dashboard.html -->
-<!-- Шаблон Dashboard аналитики претензий -->
 
 {% extends 'base.html' %}
 {% load static %}
