--- a/База_рекламаций/reclamationhub/claims/templates/claims/reclamation_to_claim.html
+++ b/База_рекламаций/reclamationhub/claims/templates/claims/reclamation_to_claim.html
@@ -1,3 +1,5 @@
+<!-- Шаблон с формой анализа конверсии рекламация → претензия -->
+
 <!-- claims/templates/claims/reclamation_to_claim.html -->
 
 {% extends 'base.html' %}
