Завершено создание docstring по всему проекту

--- a/База_рекламаций/reclamationhub/reports/templates/reports/references.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/references.html
@@ -1,5 +1,7 @@
 <!-- Шаблон основной страницы со справками и отчетами -->
 
+<!-- reports\templates\reports\references.html -->
+
 {% extends 'home.html' %}
 {% load static %}
 
