--- a/База_рекламаций/reclamationhub/static/admin/css/custom_admin.css
+++ b/База_рекламаций/reclamationhub/static/admin/css/custom_admin.css
@@ -1,4 +1,5 @@
-/* ---------------------- Стили для таблиц в админ-панели --------------------- */
+/* Стили для таблиц в админ-панели */
+
 /* Контейнер для таблицы */
 .results {
     position: relative !important;
