--- a/База_рекламаций/reclamationhub/templates/admin/add_disposal_act.html
+++ b/База_рекламаций/reclamationhub/templates/admin/add_disposal_act.html
@@ -1,4 +1,10 @@
-<!-- Шаблон для добавления акта утилизации для рекламаций -->
+<!-- Шаблон страницы с формой добавления акта утилизации для рекламаций -->
+
+<!-- templates\admin\add_disposal_act.html
+
+Наследуемся от кастомного (измененного мной) стандартного шаблона Django admin/base_site.html
+и в блоке {% block content %} прописываем свой контент
+-->
 
 {% extends "admin/base_site.html" %}
 {% load i18n admin_urls %}
