--- a/База_рекламаций/reclamationhub/templates/admin/add_group_investigation.html
+++ b/База_рекламаций/reclamationhub/templates/admin/add_group_investigation.html
@@ -1,5 +1,8 @@
-<!--
- Наследуются от базового шаблона, сохраняя всю базовую структуру и стили.
+<!-- Шаблон страницы добавления группового акта исследования -->
+
+<!-- templates\admin\add_group_investigation.html
+
+ Наследуемся от кастомного базового шаблона admin/group_form_base.html, сохраняя всю базовую структуру и стили.
  При необходимости можно добавлять свои стили или переопределять блоки
 -->
 
