--- a/База_рекламаций/reclamationhub/templates/admin/add_group_invoice_into.html
+++ b/База_рекламаций/reclamationhub/templates/admin/add_group_invoice_into.html
@@ -1,6 +1,7 @@
-<!--
- Шаблон формы группового добавления накладной прихода рекламационных изделий.
- Наследуются от базового шаблона, сохраняя всю базовую структуру и стили.
+<!-- Шаблон формы группового добавления накладной прихода рекламационных изделий -->
+
+<!-- templates\admin\add_group_invoice_into.html
+ Наследуемся от кастомного базового шаблона admin/group_form_base.html, сохраняя всю базовую структуру и стили.
  При необходимости можно добавлять свои стили или переопределять блоки
 -->
 
