--- a/База_рекламаций/reclamationhub/templates/admin/base_site.html
+++ b/База_рекламаций/reclamationhub/templates/admin/base_site.html
@@ -1,7 +1,9 @@
+<!-- Базовый шаблон страницы админ-панели с кастомными изменениями  -->
+
 <!-- templates\admin\base_site.html
- Страница админ-панели с кастомными изменениями
- Наследуемся от базового шаблона админ-панели Django admin/base.html и добавляем свои изменения
- -->
+
+ Наследуемся от стандартного шаблона админ-панели Django admin/base.html и переопределяем его (добавляем свои изменения)
+-->
 
 {% extends "admin/base.html" %}
 {% load static %}
