--- a/База_рекламаций/reclamationhub/templates/admin/change_form.html
+++ b/База_рекламаций/reclamationhub/templates/admin/change_form.html
@@ -1,8 +1,8 @@
-<!--
- Базовый шаблон для форм добавления/изменения актов рекламаций и исследования.
+<!-- Базовый шаблон для форм добавления/изменения актов рекламаций и исследования -->
 
- Мы его переопределяем для изменения сообщений об ошибке с английского "Please correct the errors below."
- на русский вариант и сокращения ссылки при открытии конкретного акта рекламации или исследования
+<!-- templates\admin\change_form.html
+ Переопределяем стандартный шаблон Django admin/change_form.html - измененяем сообщения об ошибке с английского "Please correct the errors below."
+ на русский вариант и сокращаем ссылки при открытии конкретного акта рекламации или исследования
 -->
 
 {% extends "admin/change_form.html" %}
