--- a/База_рекламаций/reclamationhub/templates/admin/change_list.html
+++ b/База_рекламаций/reclamationhub/templates/admin/change_list.html
@@ -1,8 +1,8 @@
-<!--
- Базовый шаблон страницы списка рекламаций или актов исследования.
+<!-- Базовый шаблон страницы списка рекламаций или актов исследования -->
 
- Мы его переопределяем для изменения сообщения при добавлении/изменении актов рекламаций или исследования
- (скрываем стандартное сообщение со ссылкой на рекламацию/акт исследования)
+<!-- templates\admin\change_list.html
+ Переопределяем стандартный шаблон Django admin/base_site.html - измененяем сообщения при добавлении/изменении
+ актов рекламаций или исследования (скрываем стандартное сообщение со ссылкой на рекламацию/акт исследования)
 -->
 
 {% extends "admin/base_site.html" %}
