--- a/База_рекламаций/reclamationhub/templates/admin/claim_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/claim_changelist.html
@@ -1,5 +1,10 @@
 <!-- Дочерний шаблон страницы списка претензий -->
 
+<!-- templates\admin\claim_changelist.html
+
+Наследуемся от шаблона admin/change_list.html и вносим изменения
+-->
+
 {% extends 'admin/change_list.html' %}
 {% load i18n admin_urls %}
 
