--- a/База_рекламаций/reclamationhub/templates/admin/group_form_base.html
+++ b/База_рекламаций/reclamationhub/templates/admin/group_form_base.html
@@ -1,5 +1,10 @@
 <!-- Базовый шаблон для форм группового добавления данных (накладной, актов исследования и др.) -->
 
+<!-- templates\admin\group_form_base.html
+
+Наследуемся от кастомного (измененного мной) стандартного наблона admin/base_site.html и приписываем нужный контент
+-->
+
 {% extends "admin/base_site.html" %}
 
 {% block extrastyle %}
