--- a/База_рекламаций/reclamationhub/templates/admin/nav_sidebar.html
+++ b/База_рекламаций/reclamationhub/templates/admin/nav_sidebar.html
@@ -1,6 +1,6 @@
-<!--
- Шаблон для изменения надписей в стандартной панели фильтров (в левой части страницы)
--->
+<!-- Шаблон для изменения надписей в стандартной панели фильтров (в левой части страницы) -->
+
+<!-- templates\admin\nav_sidebar.html -->
 
 {% load i18n admin_list %}
 
