--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -1,5 +1,6 @@
-<!-- templates\base.html
- Базовый шаблон главной страницы -->
+<!-- Базовый шаблон главной страницы сайта-->
+
+<!-- templates\base.html -->
 
 <!DOCTYPE html>
 <html lang="ru">
