--- a/База_рекламаций/reclamationhub/templates/base_navigation.html
+++ b/База_рекламаций/reclamationhub/templates/base_navigation.html
@@ -1,5 +1,7 @@
+<!-- Базовый шаблон навигационной панели -->
+
 <!-- templates\base_navigation.html
- Базовый шаблон навигационной панели
+
  Создали отдельный файл, т.к. навигационная панель будет включаться в главный шаблон base.html,
  шаблон админ-панели base_site.html и шаблоны приложений.
 -->
