--- a/База_рекламаций/reclamationhub/templates/home.html
+++ b/База_рекламаций/reclamationhub/templates/home.html
@@ -1,7 +1,9 @@
-<!--
- Главная страница сайта
+<!-- Главная страница сайта -->
+
+<!-- templates\home.html
+
  Наследуемся от базового base.html и указываем конкретный контекст страницы
- -->
+-->
 
 {% extends 'base.html' %}
 {% load static %}
