--- a/База_рекламаций/reclamationhub/utils/templates/utils/excel_exporter.html
+++ b/База_рекламаций/reclamationhub/utils/templates/utils/excel_exporter.html
@@ -1,4 +1,7 @@
+<!-- Шаблон страницы экспортера в Excel данных из базы данных -->
+
 <!-- utils/templates/utils/excel_exporter.html -->
+
 {% extends "base.html" %}
 {% load static %}
 
