--- a/База_рекламаций/reclamationhub/templates/admin/investigation_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/investigation_changelist.html
@@ -1,6 +1,8 @@
-<!--
- Дочерний шаблон страницы списка актов исследования.
- В шаблон добавили кнопку для перехода на форму группового акта исследования
+<!-- Дочерний шаблон страницы списка актов исследования -->
+
+<!-- templates\admin\investigation_changelist.html
+
+ Наследовались от admin/change_list.html и в шаблон добавили кнопку для перехода на форму группового акта исследования
 -->
 
 {% extends "admin/change_list.html" %}
