--- a/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
+++ b/База_рекламаций/reclamationhub/templates/admin/reclamation_changelist.html
@@ -1,6 +1,8 @@
-<!--
- Дочерний шаблон страницы списка рекламаций.
- В шаблон добавили кнопку для перехода на форму групповой накладной и экспорта в Excel
+<!-- Дочерний шаблон страницы списка рекламаций -->
+
+<!-- templates\admin\reclamation_changelist.html
+
+ Наследовались от admin/change_list.html и в шаблон добавили кнопку для перехода на форму групповой накладной
 -->
 
 {% extends 'admin/change_list.html' %}
